--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,19 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+codeStyles/
+compiler.xml
+encodings.xml
+inspectionProfiles/
+jarRepositories.xml
+libraries/
+misc.xml
+modules.xml
+vcs.xml
+.idea
+/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/dependency-reduced-pom.xml
+/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/learn-flink-java.iml
+/target/classes/log4j2.properties
+/target/maven-archiver/pom.properties
